<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.haozai.jen.ManageForMe.Safety">

    <View
        android:id="@+id/viewbar_safety"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/goodstop_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/safety_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@mipmap/safety_back" />

        <TextView
            android:id="@+id/safety_m_b"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="@color/white"
            android:gravity="center"
            android:text="账号安全"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@mipmap/safety_back" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        style="@style/bg_line" />

    <LinearLayout
        android:id="@+id/log_pswd_m"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="登陆密码" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/safety_one" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/s1_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/go" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view8"
        style="@style/bg_line"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/phone_setting"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_p"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="手机绑定" />

            <TextView
                android:id="@+id/textViewlogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/safety_two" />
        </LinearLayout>

        <TextView
            android:id="@+id/sate_show_p"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="手机号[]" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/s2_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/go" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view2"
        style="@style/bg_line"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/safety_pswd_mamger"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="支付密码" />

            <TextView
                android:id="@+id/tv_pswd_ing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/safety_pswd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/s3_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/go" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/view9"
        style="@style/bg_line"
        android:layout_height="1dp" />
</LinearLayout>
