<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.haozai.jen.ManageForMe.Log_Pswd_Manage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/safety_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@mipmap/safety_back" />

        <TextView
            android:id="@+id/safety_m_b"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="@color/white"
            android:gravity="center"
            android:text="身份验证"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@mipmap/safety_back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bg_ll"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:srcCompat="@mipmap/num_one" />

            <TextView
                android:id="@+id/s_f_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="身份验证"
                android:textColor="@color/line_safety" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/line_safety"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                app:srcCompat="@mipmap/num_two" />

            <TextView
                android:id="@+id/p_s_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="设置密码" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/safety_one_p" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/choose_ways_safety"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawableRight="@mipmap/go"
                android:gravity="center_vertical|start"
                android:state_pressed="true"
                android:text="手机号"
                android:textColor="?attr/actionModeSplitBackground"
                android:textSize="14sp" />

            <Button
                android:id="@+id/resend"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:layout_weight="3"
                android:background="@drawable/can_login"
                android:elevation="0dp"
                android:text="重新发送"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/send_sms_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/can_login"
            android:elevation="0dp"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/view_sms"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_l" />

    <LinearLayout
        android:id="@+id/q_sms_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/safety_one_sms" />

        <EditText
            android:id="@+id/editsms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_all"
            android:padding="10dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/q_send_sms"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/can_login"
            android:elevation="0dp"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/q_pswd_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/safety_one_pswd" />

        <EditText
            android:id="@+id/input_s_pswd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="6"
            android:background="@drawable/input_all"
            android:padding="10dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/q_send_pswd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/can_login"
            android:elevation="0dp"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>
